<resources>
    <string name="app_name">Pet Finder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="type">Type</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="address">Address</string>
    <string name="pet_s_website">Pet\'s Website</string>
    <string name="pet_details">Pet Details</string>
    <string name="pets">Pets</string>
    <string name="no_data_found">No Data Found</string>
</resources>