<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".pet_details.PetDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/pet_img"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:background="@color/light_gray"
            android:src="@drawable/img_placeholder"
            app:layout_constraintTop_toTopOf="parent" />

        <!--labels-->
        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pet_img" />

        <TextView
            android:id="@+id/size_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/size"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/color_label"
            app:layout_constraintStart_toStartOf="@id/name_label"
            app:layout_constraintTop_toBottomOf="@id/name_label" />

        <TextView
            android:id="@+id/color_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/color"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/name_label"
            app:layout_constraintTop_toBottomOf="@id/size_label" />

        <TextView
            android:id="@+id/address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/name_label"
            app:layout_constraintTop_toBottomOf="@id/color_label" />

        <!--    pet data-->
        <TextView
            android:id="@+id/pet_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/name_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/name_label"
            app:layout_constraintTop_toTopOf="@id/name_label"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/pet_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/size_label"
            app:layout_constraintStart_toEndOf="@id/size_label"
            app:layout_constraintTop_toTopOf="@id/size_label"
            tools:text="Young" />

        <TextView
            android:id="@+id/pet_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/color_label"
            app:layout_constraintStart_toEndOf="@id/color_label"
            app:layout_constraintTop_toTopOf="@id/color_label"
            tools:text="White" />

        <TextView
            android:id="@+id/pet_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/address_label"
            app:layout_constraintStart_toEndOf="@id/address_label"
            app:layout_constraintTop_toTopOf="@id/address_label"
            tools:text="123 st,dd" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/pet_s_website"
            app:cornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/address_label" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>